--- a/src/app/display/display.component.html
+++ b/src/app/display/display.component.html
@@ -23,7 +23,7 @@
         <td>{{ data.number }}</td>
         <td>{{ data.email }}</td>
         <td>
-          <button class="btn btn-primary me-2" routerLink="edit/{{ data.id }}">
+          <button class="btn btn-primary me-2" routerLink="edit/{{ data._id }}">
             Edit
           </button>
           <button (click)="deleteData(data.id)" class="btn btn-danger">
