--- a/src/app/display/display.component.html
+++ b/src/app/display/display.component.html
@@ -3,7 +3,15 @@
   <div class="d-flex justify-content-end me-5 mb-3">
     <button class="btn btn-success" routerLink="insert">add</button>
   </div>
-  <table class="table table-bordered table-striped">
+   <!-- Loader -->
+  <div *ngIf="loading" class="text-center my-5">
+    <div class="spinner-border text-primary" role="status">
+      <span class="visually-hidden">Loading...</span>
+    </div>
+    <p class="mt-2">Fetching user data...</p>
+  </div>
+
+  <table *ngIf="!loading" class="table table-bordered table-striped">
     <thead class="table-dark">
       <tr>
         <th>ID</th>
