fix: update in table ui

--- a/src/app/display/display.component.html
+++ b/src/app/display/display.component.html
@@ -11,8 +11,9 @@
     <p class="mt-2">Fetching user data...</p>
   </div>
 
-  <table *ngIf="!loading" class="table table-bordered table-striped">
-    <thead class="table-dark">
+  <div class="d-flex justify-content-center">
+    <table *ngIf="!loading" class="">
+    <thead class="">
       <tr>
         <th>ID</th>
         <th>Username</th>
@@ -48,4 +49,5 @@
     </tbody>
     }
   </table>
+  </div>
 </div>
