--- a/src/app/display/display.component.css
+++ b/src/app/display/display.component.css
@@ -9,7 +9,6 @@ table {
   overflow: hidden;
 }
 
-
 td {
   padding:10;
   text-align: center;
@@ -25,6 +24,7 @@ th {
   color: white;
   font-weight: 600;
   padding: 10px;
+  text-align: center;
 }
 
 tr:nth-child(even) {
