--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -1,109 +1,49 @@
-<div class="container rounded">
-  <h1 class="text-center mt-3">Form Edit</h1>
-  <div class="card d-flex justify-content-center align-items-center">
-    <form action="" [formGroup]="myForm" autocomplete="off">
-      <div class="my-3">
-        <label class="form-label" for="userNmaeId">Username</label>
-        <div class="input-group">
-          <span class="input-group-text">&#64;</span>
-          <input
-            formControlName="username"
-            type="text"
-            id="userNmaeId"
-            class="form-control"
-            autocomplete="off"
-          />
-        </div>
-        <div
-          *ngIf="
-            this.myForm.get('username')?.touched &&
-            this.myForm.get('username')?.invalid
-          "
-        >
-          <small *ngIf="this.myForm.get('username')?.errors?.['required']">
-            Username id required</small
-          >
-          <small *ngIf="this.myForm.get('username')?.errors?.['minlength']">
-            Username should should contain minimum 3 characters</small
-          >
-        </div>
-      </div>
-      <div class="mb-3">
-        <label for="name">Name</label>
-        <input
-          formControlName="name"
-          class="form-control"
-          type="text"
-          name=""
-          id="name"
-          autocomplete="off"
-        />
-        <div
-          *ngIf="
-            this.myForm.get('name')?.touched && this.myForm.get('name')?.invalid
-          "
-        >
-          <small *ngIf="this.myForm.get('name')?.errors?.['required']">
-            Name id required</small
-          >
-        </div>
-      </div>
-      <div class="mb-3">
-        <label for="number">Number</label>
-        <input
-          formControlName="number"
-          class="form-control"
-          type="number"
-          name=""
-          id="number"
-          autocomplete="off"
-          step="none"
-        />
-        <div
-          *ngIf="myForm.get('number')?.touched && myForm.get('number')?.invalid"
-        >
-          <small *ngIf="myForm.get('number')?.errors?.['required']">
-            Number id required
-          </small>
-        </div>
-      </div>
-      <div class="mb-3">
-        <label for="mail">Email</label>
-        <input
-          formControlName="email"
-          class="form-control"
-          type="email"
-          name="mail"
-          autocomplete="off"
-          id=""
-        />
-        <div
-          *ngIf="
-            this.myForm.get('email')?.touched &&
-            this.myForm.get('email')?.invalid
-          "
-        >
-          <small *ngIf="this.myForm.get('email')?.errors?.['required']">
-            Email id required</small
-          >
-          <small *ngIf="this.myForm.get('email')?.errors?.['email']">
-            Enter the correct email</small
-          >
-        </div>
-      </div>
-      <div class="d-flex justify-content-center gap-3">
-        <button
-          class="btn btn-dark mb-3"
-          type="submit"
-          (click)="onSubmit()"
-          [disabled]="myForm.invalid"
-        >
-          Submit
-        </button>
-        <button routerLink="" class="btn btn-success mb-3" type="button">
-          Back
-        </button>
-      </div>
-    </form>
-  </div>
-</div>
+<h2 mat-dialog-title>Edit Details</h2>
+<mat-dialog-content>
+  <form [formGroup]="myForm" class="d-flex flex-column gap-3">
+    <mat-form-field appearance="outline" class="mt-2">
+      <mat-label >Username</mat-label>
+      <input matInput formControlName="username" />
+      <mat-error *ngIf="myForm.get('username')?.hasError('required')">
+        Username is required
+      </mat-error>
+      <mat-error *ngIf="myForm.get('username')?.hasError('minlength')">
+        Minimum 3 characters
+      </mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+      <mat-label>Name</mat-label>
+      <input matInput formControlName="name" />
+      <mat-error *ngIf="myForm.get('name')?.hasError('required')">
+        Name is required
+      </mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+      <mat-label>Number</mat-label>
+      <input matInput type="number" formControlName="number" />
+      <mat-error *ngIf="myForm.get('number')?.hasError('required')">
+        Number is required
+      </mat-error>
+    </mat-form-field>
+
+    <mat-form-field appearance="outline">
+      <mat-label>Email</mat-label>
+      <input matInput type="email" formControlName="email" />
+      <mat-error *ngIf="myForm.get('email')?.hasError('required')">
+        Email is required
+      </mat-error>
+      <mat-error *ngIf="myForm.get('email')?.hasError('email')">
+        Enter a valid email
+      </mat-error>
+    </mat-form-field>
+  </form>
+</mat-dialog-content>
+
+<mat-dialog-actions align="end">
+  <button mat-button (click)="closeModal()">Cancel</button>
+  <button mat-flat-button color="primary" (click)="onSubmit()" [disabled]="myForm.invalid">
+    Save
+  </button>
+</mat-dialog-actions>
