--- a/src/styles.css
+++ b/src/styles.css
@@ -12,3 +12,5 @@ label{
   color:white;
   font-weight: bold;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
