--- a/src/app/display/display.component.html
+++ b/src/app/display/display.component.html
@@ -1,9 +1,11 @@
 <div class="container mt-4">
   <h1 class="mb-4 text-center fw-bolder">User List</h1>
-  <div class="d-flex justify-content-end me-5 mb-3">
+  <div class="d-flex justify-content-evenly me-5 mb-3">
+    <div></div>
+    <h1 class="mb-4 text-center fw-bolder">User List</h1>
     <button class="btn btn-success" (click)="openInsertDialog()">add</button>
   </div>
-   <!-- Loader -->
+  <!-- Loader -->
   <div *ngIf="loading" class="text-center my-5">
     <div class="spinner-border text-primary" role="status">
       <span class="visually-hidden">Loading...</span>
@@ -13,41 +15,44 @@
 
   <div class="d-flex justify-content-center">
     <table *ngIf="!loading" class="">
-    <thead class="">
-      <tr>
-        <th>ID</th>
-        <th>Username</th>
-        <th>Name</th>
-        <th>Phone Number</th>
-        <th>Email</th>
-        <th>Action</th>
-      </tr>
-    </thead>
-    @if(datas && this.datas.length>0){
-    <tbody>
-      <tr *ngFor="let data of datas; let i = index">
-        <td>{{ i + 1 }}</td>
-        <td>{{ data.username }}</td>
-        <td>{{ data.name }}</td>
-        <td>{{ data.number }}</td>
-        <td>{{ data.email }}</td>
-        <td>
-          <button class="btn btn-primary me-2" (click)="openEditDialog(data._id)" >
-            Edit
-          </button>
-          <button (click)="deleteData(data.id)" class="btn btn-danger">
-            Delete
-          </button>
-        </td>
-      </tr>
-    </tbody>
-    }@else {
-    <tbody>
-      <tr>
-        <td class="text-center" colspan="6">No data found</td>
-      </tr>
-    </tbody>
-    }
-  </table>
+      <thead class="">
+        <tr>
+          <th>ID</th>
+          <th>Username</th>
+          <th>Name</th>
+          <th>Phone Number</th>
+          <th>Email</th>
+          <th>Action</th>
+        </tr>
+      </thead>
+      @if(datas && this.datas.length>0){
+      <tbody>
+        <tr *ngFor="let data of datas; let i = index">
+          <td>{{ i + 1 }}</td>
+          <td>{{ data.username }}</td>
+          <td>{{ data.name }}</td>
+          <td>{{ data.number }}</td>
+          <td>{{ data.email }}</td>
+          <td>
+            <button
+              class="btn btn-primary me-2"
+              (click)="openEditDialog(data._id)"
+            >
+              Edit
+            </button>
+            <button (click)="deleteData(data.id)" class="btn btn-danger">
+              Delete
+            </button>
+          </td>
+        </tr>
+      </tbody>
+      }@else {
+      <tbody>
+        <tr>
+          <td class="text-center" colspan="6">No data found</td>
+        </tr>
+      </tbody>
+      }
+    </table>
   </div>
 </div>
