--- a/src/app/display/display.component.html
+++ b/src/app/display/display.component.html
@@ -2,7 +2,7 @@
   <div class="d-flex justify-content-evenly me-5 mb-3">
     <div></div>
     <h1 class="mb-4 text-center fw-bolder">User List</h1>
-    <button class="btn btn-success rounded-pill" (click)="openInsertDialog()">add</button>
+    <button class="btn btn-success" (click)="openInsertDialog()">add</button>
   </div>
   <!-- Loader -->
   <div *ngIf="loading" class="text-center my-5">
