--- a/src/app/display/display.component.html
+++ b/src/app/display/display.component.html
@@ -1,8 +1,8 @@
 <div class="container mt-4">
   <div class="d-flex justify-content-evenly me-5 mb-3">
     <div></div>
-    <h1 class="mb-4 text-center fw-bolder">User List</h1>
-    <button class="btn btn-success" (click)="openInsertDialog()">add</button>
+    <h1 class="my-4 text-center fw-bolder">User List</h1>
+    <button style="height:6rem" class="btn btn-success" (click)="openInsertDialog()">add</button>
   </div>
   <!-- Loader -->
   <div *ngIf="loading" class="text-center my-5">
