--- a/src/app/display/display.component.html
+++ b/src/app/display/display.component.html
@@ -1,8 +1,14 @@
-<div class="container mt-4">
-  <div class="d-flex justify-content-evenly me-5 mb-3">
+<div class="container-fluid mt-4">
+  <div class="d-flex justify-content-evenly align-items-baseline me-5 mb-3">
     <div></div>
     <h1 class="my-4 text-center fw-bolder">User List</h1>
-    <button style="height:6rem" class="btn btn-success" (click)="openInsertDialog()">add</button>
+    <button
+      style="height: 3rem"
+      class="btn btn-success"
+      (click)="openInsertDialog()"
+    >
+      add
+    </button>
   </div>
   <!-- Loader -->
   <div *ngIf="loading" class="text-center my-5">
@@ -12,8 +18,8 @@
     <p class="mt-2">Fetching user data...</p>
   </div>
 
-  <div class="d-flex justify-content-center">
-    <table *ngIf="!loading" class="">
+  <div class="w-100 overflow-auto">
+    <table *ngIf="!loading" class="table table-responsive">
       <thead class="">
         <tr>
           <th>ID</th>
