--- a/src/app/display/display.component.html
+++ b/src/app/display/display.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid mt-4">
+<div class="container mt-4">
   <div class="d-flex justify-content-evenly align-items-baseline me-5 mb-3">
     <div></div>
     <h1 class="my-4 text-center fw-bolder">User List</h1>
